# bub

./: .gitignore  AGENTS.md  README.md  env.example  pyproject.toml
.agents/skills/bub-upstream-backport/: SKILL.md
docs/: architecture.md  cli.md  extension-guide.md  features.md  marketplace-testing.md  onboarding-surfaces.md  skills.md
docs/channels/: index.md  telegram.md
docs/core/: index.md
docs/workflows/: index.md
src/bub/: __main__.py  commands.py  envelope.py  framework.py  hookspecs.py  model_backend.py  skills.py  types.py  utils.py  workspace.py
src/bub/builtin/: agent.py  cli.py  context.py  gateway_registry.py  hook_impl.py  model_backend.py  resource_refs.py  settings.py  shell_manager.py  store.py  tape.py  tools.py
src/bub/channels/: __init__.py  base.py  bridge.py  bridge_protocol.py  control.py  dev_bridge.py  manager.py  message.py  telegram.py  wecom_longconn_bot.py  wecom_longconn_bridge.py  wecom_webhook.py
src/bub/channels/cli/: __init__.py
src/bub/channels/node/: package-lock.json  package.json  wecom_longconn_bridge.mjs
src/bub/onboarding/: __init__.py  bundle.py  catalog.py  models.py  registry.py  renderer.py  runtime.py  service.py  store.py
src/bub/social/: __init__.py  capabilities.py  compat.py  types.py
src/bub_skills/wecom/: SKILL.md
src/bub_skills/wecom/scripts/: wecom_longconn_send.py  wecom_webhook_send.py
src/skills/: README.md
src/skills/gh/: SKILL.md
src/skills/telegram/: SKILL.md
src/skills/telegram/scripts/: telegram_edit.py  telegram_send.py
tests/: test_agent.py  test_bridge.py  test_builtin_agent.py  test_builtin_cli.py  test_builtin_hook_impl.py  test_builtin_tape.py  test_builtin_tools.py  test_channels.py  test_fork_store_merge_back.py  test_framework.py  test_gateway_registry.py  test_image_message.py  test_main.py  test_marketplace_cli.py  test_onboarding_marketplace.py  test_settings_from_env.py  test_settings_models.py  test_skills.py  test_social.py  test_subagent_tool.py  test_tools.py  test_utils.py  test_wecom_longconn_bridge.py  test_workspace_bundle.py
